--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,7 @@
+body, label, h3, h4 {
+	font-family: 'Oxygen', sans-serif;
+}
+
 body {
 	text-align: center;
 }
@@ -14,4 +18,21 @@ label {
 
 img {
 	width: 30%;
+}
+
+h3 {
+	font-size: 20px;
+	width: 80%;
+	margin: 0 auto;
+	margin-bottom: 10px;
+}
+h4 {
+	font-size: 17px;
+	width: 70%;
+	margin: 0 auto;
+	font-weight: bold;
+}
+
+h2 {
+	font-weight: bolder;
 }
